Fixed overflow of related articles Fixes #243

--- a/files/static/less/article.less
+++ b/files/static/less/article.less
@@ -30,6 +30,9 @@ section#article-details {
             font-weight:300;
             color:#666;
         }
+    .bilde img {
+        width: 100%;
+    }
 
     }
 
